# project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
AI_info/: GEMM算子开发指南.md  使用Skill开发算子_流程总结.md  如何建立自己的Skill体系.md  开发板通过电脑共享上网配置.md
AI_project/gemm_operator/: experience_workflow.md
AI_project/gradio/: gradio_demo.py  text_show.py
AI_project/milvus-deploy/: docker-compose.yml
AI_project/my_skills/: CLAUDE.md  experience_workflow.md  pipeline.md
AI_project/skill_lib/: weather_skill.py
CMake_learning/: CMakeLists.txt  helloworld
CMake_learning/sort/: insert.cpp  select.cpp
CMake_learning/test2/: sort.cpp
FFMpeg/: output.h264  simplest_ffmpeg_decoder  simplest_ffmpeg_decoder.cpp  testFFMpeg  testFFMpeg.cpp  wkc_h265_100.ts
concate_yuv/: CMakeLists.txt  del.sh
concate_yuv/concate/: concate_yuv.cpp  input_1920_1080.yuv
concate_yuv/include/: head.h
concate_yuv/test1/: calc.cpp
deep_learning/.ipynb_checkpoints/: softmax-checkpoint.ipynb
deep_learning/deep_learning/: dataPreprocessing.ipynb  data_structure.ipynb  differentiate.ipynb  linear_algebra.ipynb  linear_regression.ipynb  matrix_calculate.ipynb  perceptron.ipynb  softmat_simple.ipynb  softmax.ipynb
driver_learning/: .Module.symvers.cmd  .modules.order.cmd  .simple_driver.ko.cmd  .simple_driver.mod.cmd  .simple_driver.mod.o.cmd  .simple_driver.o.cmd  Makefile  modules.order  simple_driver.c  simple_driver.ko  simple_driver.mod  simple_driver.mod.c  simple_driver_test  simple_driver_test.c
dsp/ft/: complex_e_sample.py  conv.py  diff_equ.py  omega_sample.py  sin_period_T.py
dsp/series_opt/: audio_data_right.txt  awgn.py  delta.py  main.py  moving_avg.py  series_add.py  series_flip.py  series_mult.py
embedded_c/: 1.c  1.i  1.s  bin  bin.s  const.c  const.i  const.s  enum.c  extern.c  extern1.c  key_word.txt  logical.c  operator.c  ptr.c  static.c  static1.c  struct.c  test_time.c  test_time.i  typedef.c  typedef.i  void_ptr.c  volatile.c
leetcode_solve/stack/: 150_reverse_poland_val.c  155_minimum_stack.c  20_stack_cluster.c  255_realize_stack_through_queue.c  bin
link_load_lib/: ManualNameMangling  ManualNameMangling.cpp  SpecialSymbol  Symbol_decoration.cpp  TinyHelloWorld  TinyHelloWorld.c  a.out  hello.c  pt
link_load_lib/CMake_learn/multi/test1/: CMakeLists.txt  source1.cpp
link_load_lib/CMake_learn/multi/test2/: CMakeLists.txt  source2.c
link_load_lib/CMake_learn/v3/: CMakeLists.txt  main.cpp
link_load_lib/CMake_learn/v3/include/: head.h
link_load_lib/CMake_learn/v6/: CMakeLists.txt  test.cpp
link_load_lib/dynamic_link/: Lib.c  Program1  Program1.c  Program2  Program2.c  SectionMapping.c  SectionMapping.elf  max_malloc.c  minibash.c
link_load_lib/program_video/: a.out  main.c  run  section1.c  section2.c  sum.c  test.c  test.h
link_load_lib/static_link/: a.c  ab  target  target.c
link_load_lib/v1/: CMakeLists.txt
opencv/opencv_learn/: CMakeLists.txt  create_mat.cpp  test.cpp
opencv/opencv_learn/rectangle/: a.out  cal_thickness.cpp
opencv/opencv_learn/stitch/: stitch.py
opencv/opencv_learn/warpAffine/: Rotate_matrix.py
os_learning/chp2/: thread.h  thread_mimic.c
os_learning/chp3_pthread/: counter  fflush_test  fflush_test.c  pthread_create  pthread_create.c  pthread_sync.c  pthread_wr  pthread_wr.c
os_learning/chp4_callback/: a.out  cb  cb.c  func  func_ptr.c  main  main.c  run.c
pre_Operator/GMM/: MOG_BGS.h  gmm.py  opencv_GMM.cpp
pre_Operator/JND/: Cal_Orientation  Cal_Orientation.c  JND  JND.cpp  LUT  LUT.c  QP_map.cpp  bfp16_fp32_trans  bfp16_fp32_trans.c  bfp_test  cal_orient_diff  cal_orient_diff.c  cal_tan_fixed_point  cal_tan_fixed_point.c
pre_Operator/JND/vc_cmodel/RC_Library/: CMakeLists.txt  README.md  cvi_rc_kernel.c  cvi_rc_kernel.h  main.cc
pre_Operator/JND/vc_cmodel/RC_Library/cvi_float_point/: README.md  cvi_float_point.c  cvi_float_point.h  cvi_soft_float.c  cvi_soft_float.h
pre_Operator/JND/vc_cmodel/RC_Library/sample/: miss-america_cif_352x288_30_150_picrc_stats.csv
pre_Operator/JND/vc_cmodel/RC_Library/sample/old_sample/: Cactus_1920x1080_50_picrc_stats.csv  long_lab_iso12800_1920x1080_picrc_stats.csv
pre_Operator/SSIM/: .gitignore  bin  cmp.py  cmp_ssim.py  filtered_sc.txt  gaussian.py  gaussian_filter.c  genetate_img.py  image.txt  image2.txt  output_c.txt  requirements.txt  ssim.c  ssim.cpp  ssim.py  ssim1.c  ssim_conv.py  test.c  test.py  test_val_py.txt  tpu_image_resize.cpp
pre_Operator/fft/: a.out  abs_F_output.txt  f_output.txt  fft  fft.c  fft1  fft_image.c  generate_pic.py  plot_abs_F.py  test_factorSize  test_factorSize.c
pre_Operator/knn/: knn  knn.cpp  knn.py
pre_Operator/stft/: diff.py  fft_stft  fft_stft.c  fft_stft.py  fft_stft_in_sig.py  fft_stft_plt.py  frequency_vector.txt  input_signal.txt  istft  istft.c  istft.py  reconstructed_signal.txt  stft  stft.c  stft.py  stft1  stft1.c  stft1.c_bak  stft1.py  stft1_test  stft1_test.c  stft2  stft2.c  stft_magnitude.txt  stft_prep  stft_prep.c  stft_prep.py  stft_prep1.py  stft_prep2.py  test  test.c  test_stft.py  time_vector.txt
pre_Operator/transpose/: a.out  transpose  transpose.c  transpose_device.c
pre_Operator/vpss_rectangle/: rect_num  rect_num_test.c
python_projects/GMM_project/: GMM.cpp  GMM.py  GMM_data_gen.py  data.txt  test.py  test1.py  test2.py
sift/: cv.c  def.c  header.h  img.c  kdtree.c  main.c  sift.c  type.h
src/: main.cpp
test_area/: bit_operation  bit_operation.c  cal_surf_width  cal_surf_width.c  gaussian2D.py  generate_grip_info.c  hello.c  memcpy.cpp  test_array  test_array.cpp  test_currently.c  test_data_type.cpp  test_enum.cpp  test_fill_write_float  test_fill_write_float.cpp  test_for_loop  test_for_loop.c  test_l_r_shift.cpp  test_long_option.c  test_loop_break  test_loop_break.cpp  test_memset.cpp  test_opencv.cpp  test_option.c  test_ptr_initial.cpp  test_snprintf.cpp  test_strcpy.cpp  test_structure.cpp  test_surf.c  test_switch.cpp  test_union.cpp
test_area/img_trans/: argb1555_trans.py  (+3 more)
test_picture_video/: Farneback-Procedures.drawio  Farneback-Tensor.xqdrawio
(+278 files in other folders)
